[tool.poetry]
name = "linkml-arrays"
version = "0.0.0"
description = "linkml-arrays"
authors = ["Ryan Ly <rly@lbl.gov>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
#setuptools = "^65.5.0"
tox = "^3.25.1"
#click = "^8.1.3"
#importlib-metadata = "^4.8.0"
linkml-runtime = "^1.6.0"
numpy = "^1.24.3"
h5py = "^3.9.0"
zarr = "^2.16.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
# sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}

[tool.poetry.scripts]
linkml-arrays = "linkml_arrays.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    # "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
]

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^7.1.2"
mypy = "^1.8.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
