[tool.poetry]
name = "linkml-arrays"
version = "0.1.0"
description = "linkml-arrays"
authors = [
    "Ryan Ly <rly@lbl.gov>",
    "Chris Mungall <cjmungall@lbl.gov>",
]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.8.0"
numpy = ">=1.24.3"
h5py = ">=3.9.0"
zarr = ">=2.16.1"
xarray = "^2024.1.1"
h5netcdf = ">=1.3.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
# sphinx = {version = "*", extras = ["docs"]}
# sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
# # sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
# sphinx-click = {version = "^4.3.0", extras = ["docs"]}
# myst-parser = {version = "*", extras = ["docs"]}
# jupyter = {version = "*", extras = ["jupyter"]}

# [tool.poetry.extras]
# docs = [
#     "sphinx",
#     "sphinx-rtd-theme",
#     "sphinx-autodoc-typehints",
#     "sphinx-click",
#     "myst-parser"
# ]
# jupyter = [
#     "jupyter"
# ]

# [tool.poetry.group.dev.dependencies]
# black = "^24.1.1"
# pytest = "^7.1.2"
# mypy = "^1.8.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
